--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@color/viewBg"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.arunr.moviesapp.DetailActivity"
@@ -26,8 +26,8 @@
                 android:layout_marginLeft="10dp"
                 android:text="@string/name_movie"
                 android:textAlignment="center"
-                android:textStyle="bold"
-                android:textSize="25sp"/>
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/title"
@@ -37,7 +37,7 @@
                 android:layout_marginTop="@dimen/layout_margin_top"
                 android:padding="@dimen/padding_layout"
                 android:text="@string/name_movie"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textSize="20sp" />
 
             <TextView
@@ -47,9 +47,10 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="@dimen/layout_margin_top2"
                 android:padding="@dimen/padding_layout"
-                android:text="@string/name_movie"
+                android:text="@string/movie_details"
                 android:textAlignment="center"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/plotsynopsis"
@@ -58,7 +59,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="@dimen/layout_margin_top"
                 android:padding="@dimen/padding_layout"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textSize="20sp" />
 
             <TextView
@@ -70,7 +71,8 @@
                 android:padding="@dimen/padding_layout"
                 android:text="@string/rating"
                 android:textAlignment="center"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/user_rating"
@@ -92,7 +94,8 @@
                 android:padding="@dimen/padding_layout"
                 android:text="@string/release"
                 android:textAlignment="center"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/releasedate"
@@ -101,8 +104,9 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="@dimen/layout_margin_top"
                 android:padding="@dimen/padding_layout"
-                android:text="@string/name_movie"
-                android:textSize="20sp"/>
+                android:text="@string/release"
+                android:textAlignment="center"
+                android:textSize="20sp" />
 
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
