--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:adjustViewBounds="true">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_margin="@dimen/card_margin"
         android:elevation="3dp"
-        android:padding="4dp"
         card_view:cardCornerRadius="@dimen/card_movie_radius">
 
         <RelativeLayout
@@ -34,13 +35,16 @@
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
                 android:textColor="@color/movieTitle"
-                android:textSize="18sp" />
+                android:maxLines="2"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/userrating"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/title"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/title"
+                android:gravity="bottom"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
@@ -50,4 +54,4 @@
 
     </android.support.v7.widget.CardView>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
